--- a/client/src/app/todos/todos-list/todos-list.component.html
+++ b/client/src/app/todos/todos-list/todos-list.component.html
@@ -10,13 +10,15 @@
 
           <mat-form-field class="input-field">
             <mat-label>Owner</mat-label>
-            <input (input)="getTodosFromServer()" matInput [(ngModel)]="owner" id="todo-owner-input" placeholder="Filter by name">
-            <mat-hint>Filtered on the server</mat-hint>
+            <input (input)="getTodosFromServer()" matInput [(ngModel)]="owner" id="todo-owner-input"
+              placeholder="Filter by name">
+            <mat-hint>Filtered on the database</mat-hint>
           </mat-form-field>
 
           <mat-form-field class="input-field">
             <mat-label>Category</mat-label>
-            <input (input)="update()" [(ngModel)]="category" matInput id="todo-category-input" placeholder="Filter by category">
+            <input (input)="update()" [(ngModel)]="category" matInput id="todo-category-input"
+              placeholder="Filter by category">
             <mat-hint>Filtered on client</mat-hint>
           </mat-form-field>
         </div>
@@ -26,13 +28,15 @@
 
           <mat-form-field class="input-field">
             <mat-label>Body</mat-label>
-            <input (input)="update()" [(ngModel)]="body" matInput id="todo-body-input" type="text" placeholder="Filter by body" min="0" max="200">
+            <input (input)="update()" [(ngModel)]="body" matInput id="todo-body-input" type="text"
+              placeholder="Filter by body" min="0" max="200">
             <mat-hint>Filtered on client</mat-hint>
           </mat-form-field>
 
           <mat-form-field class="input-field">
             <mat-label>Status</mat-label>
-            <mat-select (selectionChange)="update()" [(ngModel)]="status" id="todo-status-input" data-test="todoStatusSelect">
+            <mat-select (selectionChange)="update()" [(ngModel)]="status" id="todo-status-input"
+              data-test="todoStatusSelect">
               <mat-option>--</mat-option>
               <mat-option value="complete">Complete</mat-option>
               <mat-option value="incomplete">Incomplete</mat-option>
@@ -44,7 +48,7 @@
         <div fxLayout="row wrap" fxLayoutGap="10px">
           <mat-form-field class="input-field">
             <mat-label>Order by</mat-label>
-            <mat-select [(ngModel)]="sort" (selectionChange)="update()" >
+            <mat-select [(ngModel)]="sort" (selectionChange)="update()">
               <mat-option>--</mat-option>
               <mat-option value="category">Category</mat-option>
               <mat-option value="status">Status</mat-option>
@@ -55,12 +59,21 @@
           </mat-form-field>
           <mat-form-field class="input-field">
             <mat-label>Limit</mat-label>
-            <input [(ngModel)]="limit" (input)="update()" matInput id="user-age-input" type="number" placeholder="Enter an amount here" min="0" max="200">
+            <input [(ngModel)]="limit" (input)="update()" matInput id="user-age-input" type="number"
+              placeholder="Enter an amount here" min="0" max="200">
             <mat-hint>Limit by number</mat-hint>
           </mat-form-field>
         </div>
 
         <br>
+
+        <div class="fab-container">
+          <a routerLink="/todos/new">
+            <button mat-fab color="primary" aria-label="Add a todo">
+              <mat-icon>add</mat-icon>
+            </button>
+          </a>
+        </div>
 
       </mat-card-content>
     </mat-card>
