--- a/client/src/app/todos/todos-list/todos-list.component.scss
+++ b/client/src/app/todos/todos-list/todos-list.component.scss
@@ -61,3 +61,11 @@
     margin: 10px 0px 10px 0px;
   }
 }
+.fab-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 20px;
+}
+
