--- a/client/src/app/todos/add-todo/add-todo.component.html
+++ b/client/src/app/todos/add-todo/add-todo.component.html
@@ -21,7 +21,7 @@
             <mat-label>Category</mat-label>
             <input matInput type="text" placeholder="Category" formControlName="category" required>
             <mat-error *ngFor="let validation of addTodoValidationMessages.category">
-              <mat-error class="error-message" data-tSest="categoryError"
+              <mat-error class="error-message" data-test="categoryError"
                 *ngIf="addTodoForm.get('category').hasError(validation.type) && (addTodoForm.get('category').dirty || addTodoForm.get('category').touched)">
                 {{validation.message}}
               </mat-error>
@@ -42,12 +42,12 @@
 
           <mat-form-field>
             <mat-label>Status</mat-label>
-            <mat-select required formControlName="status">
+            <mat-select data-test="todoStatusSelect" required formControlName="status">
               <mat-option value="complete">Complete</mat-option>
               <mat-option value="incomplete">Incomplete</mat-option>
             </mat-select>
             <mat-error *ngIf="addTodoForm.get('status').hasError('required')">You must make a selection</mat-error>
-            <mat-error
+            <mat-error data-test="statusError"
               *ngIf="addTodoForm.get('status').hasError('pattern') && !addTodoForm.get('status').hasError('required')">
               Your selection is invalid
             </mat-error>
@@ -56,7 +56,7 @@
         </mat-card-content>
         <mat-card-actions align="end">
           <button mat-button type="button" color="primary" [disabled]="!addTodoForm.valid" type="submit"
-            data-test="confirmAddUserButton">
+            data-test="confirmAddTodoButton" id="confirmAddTodoButton">
             ADD TODO
           </button>
         </mat-card-actions>
