--- a/client/src/app/todos/todo-card/todo-card.component.html
+++ b/client/src/app/todos/todo-card/todo-card.component.html
@@ -1,15 +1,15 @@
 <mat-card *ngIf="todo" class="todo-card">
   <mat-card-header>
-    <mat-card-title class="todo-card-name">{{todo.owner}}</mat-card-title>
+    <mat-card-title class="todo-card-owner">{{todo.owner}}</mat-card-title>
     <div id="div" class="div">
       <span id="span" [className]="todo.status ? 'completed' : 'incomplete'">
-        <h4 [className]="todo.status ? 'green-text' : 'red-text'" class="todo-card-status">
+        <h4 id="status"  [className]="todo.status ? 'green-text' : 'red-text'" class="status todo-card-status">
           {{todo.status == true ? 'Complete':'Incomplete'}}</h4>
       </span>
     </div>
   </mat-card-header>
   <mat-card-content>
-    <p class="body">{{todo.body}}</p>
+    <p class="body todo-card-body">{{todo.body}}</p>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button class="btn" data-test="viewProfileButton" *ngIf="todo"
